added classes to css and used new classes to perform js class changes on page.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
   <div class="fluid-container">
+    <div class="side-bar">
+      <div class="side-bar-button">
+        <button class="btn btn-initial" type="button" name="button">Invert Colors</button>
+      </div>
+    </div>
     <h1>Cob Houses</h1>
     <div id="Intro">
       <img id="smaller" src="img/build.jpg" alt="Cob house" />
